native/include/sogen_dart.h

typedef struct sogen_dart_app sogen_dart_app;
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_memory_write(
    sogen_dart_app *app, uint64_t address, uint64_t size,
    sogen_dart_memory_callback callback, void *user_data,
    sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_instruction(
    sogen_dart_app *app, int32_t instruction,
    sogen_dart_instruction_callback callback, void *user_data,
    sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_interrupt(
    sogen_dart_app *app, sogen_dart_interrupt_callback callback,
    void *user_data, sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_memory_violation(
    sogen_dart_app *app, sogen_dart_memory_violation_callback callback,
    void *user_data, sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_hook_basic_block(
    sogen_dart_app *app, sogen_dart_basic_block_callback callback,
    void *user_data, sogen_dart_hook_id *out_hook);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_start(sogen_dart_app *app, size_t instruction_count);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_stop(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_save_snapshot(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_restore_snapshot(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_serialize_state(
    sogen_dart_app *app, sogen_dart_buffer *out_buffer);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_deserialize_state(
    sogen_dart_app *app, const uint8_t *data, size_t length);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_setup_process(sogen_dart_app *app);
SOGEN_DART_EXPORT sogen_dart_status
sogen_dart_windows_yield_thread(sogen_dart_app *app, int32_t alertable);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_perform_thread_switch(
    sogen_dart_app *app, int32_t *switched);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_activate_thread(
    sogen_dart_app *app, uint32_t id, int32_t *activated);
SOGEN_DART_EXPORT sogen_dart_status sogen_dart_windows_read_memory(
    sogen_dart_app *app, uint64_t address, uint8_t *destination, size_t length);