native/include/generated/sogen_dart_generated.h

typedef uint64_t sogen_dart_hook_id;
typedef int32_t sogen_dart_status;
typedef struct sogen_dart_buffer {
  uint8_t *data;
  size_t length;
} sogen_dart_buffer;
typedef void (*sogen_dart_memory_callback)(void *user_data, sogen_dart_hook_id hook, uint64_t address, const uint8_t *data, size_t length);
typedef int32_t (*sogen_dart_instruction_callback)(void *user_data, sogen_dart_hook_id hook, uint64_t data);
typedef void (*sogen_dart_interrupt_callback)(void *user_data, sogen_dart_hook_id hook, int32_t interrupt_number);
typedef int32_t (*sogen_dart_memory_violation_callback)(void *user_data, sogen_dart_hook_id hook, uint64_t address, size_t size, int32_t operation, int32_t violation_type);
typedef void (*sogen_dart_basic_block_callback)(void *user_data, sogen_dart_hook_id hook, uint64_t address, size_t instruction_count, size_t size);