lib/src/ffi/sogen_native_bindings.g.dart


  int sogen_dart_windows_hook_memory_write(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    int size,
    sogen_dart_memory_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_memory_write(
      app,
      address,
      size,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_memory_writePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint64,
            ffi.Uint64,
            sogen_dart_memory_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_memory_write');
  late final _sogen_dart_windows_hook_memory_write =
      _sogen_dart_windows_hook_memory_writePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              int,
              sogen_dart_memory_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_hook_instruction(
    ffi.Pointer<sogen_dart_app> app,
    int instruction,
    sogen_dart_instruction_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_instruction(
      app,
      instruction,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_instructionPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Int32,
            sogen_dart_instruction_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_instruction');
  late final _sogen_dart_windows_hook_instruction =
      _sogen_dart_windows_hook_instructionPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              sogen_dart_instruction_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_hook_interrupt(
    ffi.Pointer<sogen_dart_app> app,
    sogen_dart_interrupt_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_interrupt(
      app,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_interruptPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            sogen_dart_interrupt_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_interrupt');
  late final _sogen_dart_windows_hook_interrupt =
      _sogen_dart_windows_hook_interruptPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              sogen_dart_interrupt_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_hook_memory_violation(
    ffi.Pointer<sogen_dart_app> app,
    sogen_dart_memory_violation_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_memory_violation(
      app,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_memory_violationPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            sogen_dart_memory_violation_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_memory_violation');
  late final _sogen_dart_windows_hook_memory_violation =
      _sogen_dart_windows_hook_memory_violationPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              sogen_dart_memory_violation_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_hook_basic_block(
    ffi.Pointer<sogen_dart_app> app,
    sogen_dart_basic_block_callback callback,
    ffi.Pointer<ffi.Void> user_data,
    ffi.Pointer<sogen_dart_hook_id> out_hook,
  ) {
    return _sogen_dart_windows_hook_basic_block(
      app,
      callback,
      user_data,
      out_hook,
    );
  }

  late final _sogen_dart_windows_hook_basic_blockPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            sogen_dart_basic_block_callback,
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<sogen_dart_hook_id>,
          )
        >
      >('sogen_dart_windows_hook_basic_block');
  late final _sogen_dart_windows_hook_basic_block =
      _sogen_dart_windows_hook_basic_blockPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              sogen_dart_basic_block_callback,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<sogen_dart_hook_id>,
            )
          >();

  int sogen_dart_windows_start(
    ffi.Pointer<sogen_dart_app> app,
    int instruction_count,
  ) {
    return _sogen_dart_windows_start(app, instruction_count);
  }

  late final _sogen_dart_windows_startPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>, ffi.Size)
        >
      >('sogen_dart_windows_start');
  late final _sogen_dart_windows_start = _sogen_dart_windows_startPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int)>();

  int sogen_dart_windows_stop(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_windows_stop(app);
  }

  late final _sogen_dart_windows_stopPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_windows_stop');
  late final _sogen_dart_windows_stop = _sogen_dart_windows_stopPtr
      .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_windows_save_snapshot(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_windows_save_snapshot(app);
  }

  late final _sogen_dart_windows_save_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_windows_save_snapshot');
  late final _sogen_dart_windows_save_snapshot =
      _sogen_dart_windows_save_snapshotPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_windows_restore_snapshot(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_windows_restore_snapshot(app);
  }

  late final _sogen_dart_windows_restore_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_windows_restore_snapshot');
  late final _sogen_dart_windows_restore_snapshot =
      _sogen_dart_windows_restore_snapshotPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_windows_serialize_state(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<sogen_dart_buffer> out_buffer,
  ) {
    return _sogen_dart_windows_serialize_state(app, out_buffer);
  }

  late final _sogen_dart_windows_serialize_statePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<sogen_dart_buffer>,
          )
        >
      >('sogen_dart_windows_serialize_state');
  late final _sogen_dart_windows_serialize_state =
      _sogen_dart_windows_serialize_statePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<sogen_dart_buffer>,
            )
          >();

  int sogen_dart_windows_deserialize_state(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Uint8> data,
    int length,
  ) {
    return _sogen_dart_windows_deserialize_state(app, data, length);
  }

  late final _sogen_dart_windows_deserialize_statePtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('sogen_dart_windows_deserialize_state');
  late final _sogen_dart_windows_deserialize_state =
      _sogen_dart_windows_deserialize_statePtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              ffi.Pointer<ffi.Uint8>,
              int,
            )
          >();

  int sogen_dart_windows_setup_process(ffi.Pointer<sogen_dart_app> app) {
    return _sogen_dart_windows_setup_process(app);
  }

  late final _sogen_dart_windows_setup_processPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>)
        >
      >('sogen_dart_windows_setup_process');
  late final _sogen_dart_windows_setup_process =
      _sogen_dart_windows_setup_processPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>)>();

  int sogen_dart_windows_yield_thread(
    ffi.Pointer<sogen_dart_app> app,
    int alertable,
  ) {
    return _sogen_dart_windows_yield_thread(app, alertable);
  }

  late final _sogen_dart_windows_yield_threadPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(ffi.Pointer<sogen_dart_app>, ffi.Int32)
        >
      >('sogen_dart_windows_yield_thread');
  late final _sogen_dart_windows_yield_thread =
      _sogen_dart_windows_yield_threadPtr
          .asFunction<int Function(ffi.Pointer<sogen_dart_app>, int)>();

  int sogen_dart_windows_perform_thread_switch(
    ffi.Pointer<sogen_dart_app> app,
    ffi.Pointer<ffi.Int32> switched,
  ) {
    return _sogen_dart_windows_perform_thread_switch(app, switched);
  }

  late final _sogen_dart_windows_perform_thread_switchPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_perform_thread_switch');
  late final _sogen_dart_windows_perform_thread_switch =
      _sogen_dart_windows_perform_thread_switchPtr
          .asFunction<
            int Function(ffi.Pointer<sogen_dart_app>, ffi.Pointer<ffi.Int32>)
          >();

  int sogen_dart_windows_activate_thread(
    ffi.Pointer<sogen_dart_app> app,
    int id,
    ffi.Pointer<ffi.Int32> activated,
  ) {
    return _sogen_dart_windows_activate_thread(app, id, activated);
  }

  late final _sogen_dart_windows_activate_threadPtr =
      _lookup<
        ffi.NativeFunction<
          sogen_dart_status Function(
            ffi.Pointer<sogen_dart_app>,
            ffi.Uint32,
            ffi.Pointer<ffi.Int32>,
          )
        >
      >('sogen_dart_windows_activate_thread');
  late final _sogen_dart_windows_activate_thread =
      _sogen_dart_windows_activate_threadPtr
          .asFunction<
            int Function(
              ffi.Pointer<sogen_dart_app>,
              int,
              ffi.Pointer<ffi.Int32>,
            )
          >();

  int sogen_dart_windows_read_memory(
    ffi.Pointer<sogen_dart_app> app,
    int address,
    ffi.Pointer<ffi.Uint8> destination,
    int length,
  ) {
    return _sogen_dart_windows_read_memory(app, address, destination, length);
  }
